more difficult expert mode

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div id="options">
         </div>
     </div>
-    <script defer src="./seedrandom.min.js"></script>
-    <script defer src="./autocomplete.js"></script>
-    <script defer src="./ztrdle.js"></script>
+    <script src="./seedrandom.min.js"></script>
+    <script src="./autocomplete.js"></script>
+    <script src="./ztrdle.js"></script>
     <script defer>
         const ztrdle = new Ztrdle(
             "animals.json",
